fixed spacing AGAIN

--- a/app/assets/stylesheets/activities/_show.scss
+++ b/app/assets/stylesheets/activities/_show.scss
@@ -39,7 +39,7 @@ body {
   border-radius: 20px;
   border: 10px solid #f6f193;
   padding: 30px;
-  width: 50%;
+  width: 20%;
   position: absolute;
   left: 0;
   right: 0;
